css/css/mlearningstyle.css
/* ... */
#quizMessages a.failedLink {
	background: #ff0000; 
	font-weight: bold;
	color;#FFF;
    border-top: 3px double #ff2d00;
    border-left: 3px double #ff2d00;
    border-right: 3px double #bf2d00;
    border-bottom: 3px double #bf2d00;
	}

  
  #quizMessages{position:relative;}
  #quizMessages a.gothereLink, #quizMessages a.gothereLink:link, #quizMessages a.gothereLink:visited {
    background:#009933;
    border-right:3px double #003333;
    border-bottom:3px double #003333;
    border-top:3px double #00CC33;
    border-left:3px double #00CC33;
 } 
 #quizMessages a.closeNowLink {
	 background:#EE3124;
	 border-right:3px double #C13D15;
     border-bottom:3px double #C13D15;
     border-top:3px double #EA663F;
     border-left:3px double #EA663F;
	 margin-left:auto;
	 margin-right:auto;
 }
 
 #quizMessages a.tryagainLink:hover, a.button:hover{
   background:#0046FF;}
 #quizMessages a.gothereLink:hover{background:#00FF33;}
 #quizMessages a.closeNowLink:hover{background:#F00;}
 table#unfinQzTbl {
    margin-top:12px;
    border-top:1px solid #CCC;
    margin-bottom:70px;
    }
#quizMessages a.failedLink:hover {
	background:#cc0000;
	
} 
 #quizMessages  td.unfinQzLft { 
   border-bottom:1px solid #CCCCCC; 
   padding-right:3px;
   padding-left:0px;
   width:200px;
 }
#quizMessages td.unfinQzRt {border-bottom:1px solid #CCCCCC;width:150px; }

/*for messages associated with tracking individual interactions */
 .interactionFdbck{color:#FF0000;display:block;margin-top:3px;padding:2px;font-weight:bold;}
 
  /*--Banner Style for generic clinical banner --*/
#banner{
    display:block;
	width:100%;
	height: 130px;
	background:#B8CDEA url(../../images/img/header.png) left no-repeat;
 	font:24px bold;
	margin-bottom: 6px;
 	color:#FFF;
}
/*use if you want to use a custom JPG image*/
#banner.localimage { 	
	background: #3659B5 url(../../media/header.jpg) left no-repeat; 
	}
/*use if you want to use a custom PNG image*/
#banner.localimagepng {
	background: #3659B5 url(../../media/header.png) left no-repeat; 
}
#banner.michart{
	background: #3659B5 url(../../images/img/michart-header.png) no-repeat 20px;
 	text-align:left;
	display:inline-block;
	height:125px;
	 line-height: 125%;
	 position:relative;
	 	color:#FFF;
	 	width:100%;
	}

#banner.mcit{
	text-align: left;
	display: inline-block;
	height: 125px;
	line-height: 125%;
	position: relative;
	color: #FFF;
	width: 100%;
	background-color: #3659B5;
	background-image: url(../../images/img/mcit-header.png);
	background-repeat: no-repeat;
	background-position: 20px;
}


#banner.michart #bannerTitle {
	/*width:20%; */
	text-align:left;
	 display: block;
	 position:relative;
	margin:18px 24px 6px 470px;
	font: bold 24px  'Open Sans', sans-serif;
	letter-spacing:-2px;
	vertical-align: middle;
	line-height:1em;
}
 

#bnrTitle{
   position:relative;
   left:390px;
   left:50%;
   top:20px;
   width:290px;
   font:bold 18px Geneva, Arial, Helvetica, sans-serif;
   color:#FFFFFF;
}
/*--end banner styles--*/
#content table, #content table td {border-color: #000;}

/*toggle on or off style for toggle() function in toggleOpen.js*/
.toggle{ visibility:hidden;display:none; }


/*--score and status page--*/
.StatusPageFdbk, #content TD.StatusPageFdbk {
     background-color:#FFFF99;
     text-align:center;
     border:1px solid #DEA118;
     width:300px;
     padding:3px;
     }
 #unFinOptions {
	 position:absolute;
     text-align:center;
     display:block;
     background-color:#FFFF99;
     border:1px solid #DEA118;
     left:400px;
     top:0px;
     width:240px important!;
	 width:240px;
     padding:6px;
     text-align:center;
	}  
	
	#finOptions  {  	
	 /* position:absolute;
	  left:400px;*/
	  top:0px;
	  width:700px;
      padding:6px;
      text-align:center;
	  }
.CertInstructions{/*padding-left:18px;*/}

.moduleStatusMsg{ 
    font-size:20px;
    color:#FF0000;
    text-transform:uppercase; 
    }



.loadingMsg{
     width:300px;
     height:30px;
     position:absolute;
     left:150px;
     top:0px;
     text-align:center;
     background-color:#FFFCCC;
     opacity:0.8;
     border:1px solid #CCC;
     padding:24px;
     display:block;
     }
     



    
.finalSuspendButton, .finalCompleteButton {
    display:inline-block;
    width:150px;
    padding:5px;
    margin:12px;
    background-color:red;
    border-top:3px ridged #FF2D00;
    border-left:3px ridge #FF2D00;
    border-bottom:3px ridge #BF2D00;
    border-right:3px ridge #BF2D00;
    color:#fff;
    font-size:12px;
   	}
     
    .finalCompleteButton {  
    background-color:#009933;
    border-top:3px ridged #00D144;
    border-left:3px ridge #00D144;
    border-bottom:3px ridge #005217;
    border-right:3px ridge #005217;
    }
     
/*--end score and status page--*/     
     
     

	
	
	
/*mlearning-specific colors and non-responsive styles*/

#sidebar-left a.open{    
   display:block;
   visibility:visible;
}

#sidebar-left a.closed{
	display:none;
   	visibility:hidden;


}
/*navbar*/
.nav-tabs.nav-stacked > li > a.expander, .nav-tabs.nav-stacked > li > ul > li > a.expander {
	background-color:#595959;
	background-color:#333333;
	font:normal .8em;
	text-transform: uppercase;
	letter-spacing: .1em;
	text-align:center;
	margin:0px 2px;
	border-color: -moz-use-text-color -moz-use-text-color #666666;
    border-radius: 0 0 0 0;
    border-style: none none solid;
    border-width: medium medium 1px;
    color: #FFFFFF;
    padding:2px 10px;
    text-decoration: none;
}

.nav-tabs.nav-stacked  {
	/* margin:0px -2px;
		margin:0px; */
}

.nav-tabs.nav-stacked > li:first-child > a{
margin-right:2px;
}

.nav-stacked >li+li{
	margin-top:0px;
}  

#sidebar-left.span2 .nav li.navtoggle,#sidebar-left.span3 li.navtoggle,#sidebar-left.span4 li.navtoggle, {
	display:none;
}

#side=bar-left.expandnav li {display:block}

#sidebar-left.span1 .nav-collapse {overflow:visible;}

#sidebar-left.span1 .nav li.navtoggle{}

#sidebar-left.span1 .nav > li.navtoggle > a > img{ }
/* ... */

